fix audio align in oxxxyjingle

--- a/oxxxyjingle/styles.css
+++ b/oxxxyjingle/styles.css
@@ -138,7 +138,7 @@ body {
   z-index: 2;
   position: absolute;
   width: 100%;
-  top: 5%;
+  top: 0%;
   left: 50%;
   transform: translateX(-50%);
   display: block;
